tests/files/lexer_tests/should_fail/055.cmdr
// Illegal character in variable name (ascii 22)
myvar = 22;